@@ -1,25 +1,0 @@
-<install>
-	<name>ofxDirList</name>
-	<version>0.01</version>
-	<author>theo watson</author>
-	<url></url>
-	
-	<add>
-		
-		<!-- 	=====================================================================	-->
-		<!--	========================== add per project using this addon =========	-->
-		<!-- 	=====================================================================	-->
-	
-		<src>
-			<folder name="addons/ofxDirList/src">
-				<file>../../../addons/ofxDirList/src/ofxDirList.h</file>
-			</folder>
-		</src>
-		
-		<include>
-			<path>../../../addons/ofxDirList/src</path>
-		</include>
-		
-	</add>
-	 
-</install>
