@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec2f.h"
-
-#warning ofxPoint2f has been deprecated. 
-#warning Remove all references to ofxPoint2f.h and use ofVec2f instead.
-
-typedef ofVec2f ofxPoint2f;
