@@ -1,8 +1,0 @@
-#pragma once
-
-#include "ofVec2f.h"
-
-#warning ofxVec2f has been deprecated. 
-#warning Remove all references to ofxVec2f.h and use ofVec2f instead.
-
-typedef ofVec2f ofxVec2f;
