@@ -1,13 +1,0 @@
-#pragma once
-
-#include "ofVectorMath.h"
-
-#warning ofxVectorMath has been deprecated. 
-#warning Remove all references to ofxVectorMath.h and use ofVectorMath instead.
-
-#include "ofxVec2f.h"
-#include "ofxVec3f.h"
-#include "ofxVec4f.h"
-#include "ofxMatrix3x3.h"
-#include "ofxMatrix4x4.h"
-#include "ofxQuaternion.h"
