@@ -1,6 +1,7 @@
 ofVec*f::lengthSquared() is deprecated. Use ofVec*f::squareLength() instead.
 ofVideoGrabber::grabFrame() is deprecated. Use ofVideoGrabber::update() instead.
 ofVideoPlayer::idleMovie() is deprecated. Use ofVideoPlayer::update() instead
+Remove long-ago deprecated ofxDirList, ofxThread and ofxVectorMath.
 
 ---------------------------------------------------------------
 	  .oooo.     .oooo.    ooooooooo   .o  
